--- a/Flask/templates/mqttindex.html
+++ b/Flask/templates/mqttindex.html
@@ -320,7 +320,7 @@ $(document).ready(function() {
     <div class="col-xs-6" id="registerArea">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title">Register Ochestration Device</h3>
+            <h3 class="panel-title">Register Device</h3>
           </div>
           <div class="panel-body">
             <div class="col-xs-12">
