--- a/Flask/templates/mqttindex.html
+++ b/Flask/templates/mqttindex.html
@@ -89,7 +89,14 @@ $(document).ready(function() {
           text = "The command line has a problem. \n"
         }
         else{
-          
+          // text2=text.replace(/\n/gi,"  ");
+          // text2=text2.replace(/           /gi,"  ");
+          // text2=text2.replace(/          /gi,"  ");
+          // text2=text2.replace(/     /gi,"  ");
+          // text2=text2.replace(/    /gi,"  ");
+          // text2=text2.replace(/   /gi,"  ");
+          // text2=text2.split('  ');
+          // console.log(text2);
           text=text.replace(/minutes/gi,"m");
           text=text.replace(/hours/gi,"h");
           text=text.replace(/seconds/gi,"s");
