--- a/Flask/templates/mqttindex.html
+++ b/Flask/templates/mqttindex.html
@@ -23,7 +23,10 @@
 let httpRequest1;
 let httpRequest2;
 let httpRequest3;
-let ackInterval = 3000;
+let ackInterval = 2000;
+let count = 0;
+var devicesNameList;
+var devicesNameList_copy;
 
 $(document).ready(function() {
     var socket = io.connect('http://' + document.domain + ':' + location.port);
@@ -34,9 +37,25 @@ $(document).ready(function() {
 
     // check for MQTT connection
     setInterval(function(){
-      var data = '{"topic": "ACK", "message": "ack"}';
-      //console.log(data);
-      socket.emit('ack', data=data);
+      console.log(count)
+      if(count==1){
+        var data = '{"topic": "ACK", "message": "ack"}';
+        //console.log(data);
+        devicesNameList_copy = devicesNameList.slice();
+        console.log(devicesNameList_copy);
+        socket.emit('ack', data=data);
+        count += 1;
+      }
+      else if(count==5){
+        // make remaining devices's connection to False
+        devicesNameList_copy.forEach(element => changeConn(element,"False"));
+        getList("devices",httpRequest1);
+        count = 0;
+      }
+      else{
+        count += 1;
+      }
+      
     },ackInterval);
     
     // $.getJSON('http://Gd.geobytes.com/GetCityDetails?callback=?', function(data) {
@@ -105,9 +124,14 @@ $(document).ready(function() {
       var topic = data['topic'];
       var sub_topic = $('#subscribe_topic').val();
       if(topic==="RST"){
-        console.log(data['payload'])
+        var name = data['payload']
+        console.log(name);
+        changeConn(name,"True");
+        devicesNameList_copy = devicesNameList_copy.filter(e => e !== name);
+        console.log(devicesNameList_copy);
+        
       }
-      if(sub_topic == topic){
+      else if(sub_topic == topic){
         var text = data['payload'];
         if(text == "\n"){
           text = "The command line has a problem. \n"
@@ -334,8 +358,6 @@ $(document).ready(function() {
 
         <div class="panel-body">
           <div class="col-xs-12">
-
-
 
             <div class="wrap-table100">
               <div class="table" id="deviceTable">
